modified:   offwhtp/off-white paper.tex

--- a/offwhtp/off-white paper.tex
+++ b/offwhtp/off-white paper.tex
@@ -101,14 +101,14 @@
  }
  \makeatother
 
-%	╔═══════════════════DELETED TERMS═════════════════════╗
-%	║Autonomous Object				      ║
-%	║Design Pattern				              ║
-%	║Object-Oriented Programming			      ║
-%	║External Actor				              ║
-%	║Abstract Machine				      ║
-%	║Hacker Ethic					      ║ 
-%	╚═════════════════════════════════════════════════════╝
+%╔═══════════════════DELETED TERMS═════════════════════╗
+%║Autonomous Object				       ║
+%║Design Pattern				       ║
+%║Object-Oriented Programming			       ║
+%║External Actor				       ║
+%║Abstract Machine				       ║
+%║Hacker Ethic					       ║ 
+%╚═════════════════════════════════════════════════════╝
 
 
 \makenoidxglossaries
@@ -319,6 +319,8 @@
 					\item \textbf{Mix Hash} -- This is a 32-byte hash that verifies a sufficient amount of computation has been done on this block.
 					\item \textbf{Nonce} -- This is an 8-byte hash that verifies a sufficient amount of computation has been done on this block.
 					\item \textbf{Ommer Block Headers} -- These are the same components listed above for any ommers.
+				
+					\subsubsection{Block Footer}
 					\item \textbf{Transaction Series} -- This is the only non-header content in the block.
 				\end{enumerate}
 
