--- a/offwhtp/off-white paper.tex
+++ b/offwhtp/off-white paper.tex
@@ -648,42 +648,97 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 	0x3b & EXTCODESIZE & 700 & 1 & 1 & Get the size of an account's code. \\
 	0x3c & EXTCODECOPY & 700 & 4 & 0 & Copy an account's code to memory. \\
 	0x3d & RETURNDATASIZE & 2 & 0 & 1 & \\
-0x3e & RETURNDATACOPY & 3 & 3 & 0 \\
+	0x3e & RETURNDATACOPY & 3 & 3 & 0 & \\
 
 	\hline
 \end{longtable}
-x40 & BLOCKHASH & 20 & 1 & 1 \\
-0x41 & COINBASE & 2 & 0 & 1 \\
-0x42 & TIMESTAMP & 2 & 0 & 1 \\
-0x43 & NUMBER & 2  & 0 & 1 \\
-0x44 & DIFFICULTY & 2 & 0 & 1 \\
-0x45 & GASLIMIT & 2  & 0 & 1 \\
-0x50 & POP & 2 & 1 & 0 \\
-0x51 & MLOAD & 3 & 1 & 1 \\
-0x52 & MSTORE & 3 & 2 & 0 \\
-0x53 & MSTORE8 & 3 & 2 & 0 \\
-0x54 & SLOAD & 200 & 1 & 1 \\
-0x55 & SSTORE & 0 & 2 & 0 \\
-0x56 & JUMP & 8 & 1 & 0 \\
-0x57 & JUMPI & 10 & 2 & 0 \\
-0x58 & PC & 2 & 0 & 1 \\
-0x59 & MSIZE & 2 & 0 & 1 \\
-0x5a & GAS & 2 & 0 & 1 \\
-0x5b & JUMPDEST & 1 & 0 & 0 \\
-0xa0 & LOG0 & 375 & 2 & 0 \\
-0xa1 & LOG1 & 750 & 3 & 0 \\
-0xa2 & LOG2 & 1125 & 4 & 0 \\
-0xa3 & LOG3 & 1500 & 5 & 0 \\
-0xa4 & LOG4 & 1875 & 6 & 0 \\
-0xf0 & CREATE & 32000 & 3 & 1 \\
-0xf1 & CALL & 700 & 7 & 1 \\
-0xf2 & CALLCODE & 700 & 7 & 1 \\
-0xf3 & RETURN & 0 & 2 & 0 \\
-0xf4 & DELEGATECALL & 700 & 6 & 1 \\
-0xf5 & CALLBLACKBOX & 40 & 7 & 1 \\
-0xfa & STATICCALL & 40 & 6 & 1 \\
-0xfd & REVERT & 0 & 2 & 0 \\
-0xff & SUICIDE & 5000 & 1 & 1 \\
+
+        \subsection{Byte value 0x40 to 0x45: Block Data}
+	\begin{longtable}{|ccccc|}
+	\hline
+	\textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+	\hline
+
+		0x40 & BLOCKHASH & 20 & 1 & 1 & Get the hash of one of the 256 most recent blocks. A value of 0 is left on the stack if the block number is more than 256 in number behind the current one, or if it is a number greater than the current one.} \\ 
+		0x41 & COINBASE & 2 & 0 & 1 & Look up a block's beneficiary address by its hash.\\
+		0x42 & TIMESTAMP & 2 & 0 & 1 & Look up a block's timestamp by its hash.\\
+		0x43 & NUMBER & 2  & 0 & 1 & Look up a block's number by its hash. \\
+		0x44 & DIFFICULTY & 2 & 0 & 1 & Look up a block's difficulty by its hash. \\
+		0x45 & GASLIMIT & 2  & 0 & 1 & Look up a block's gas limit by its hash. \\
+	
+	\hline
+	\end{longtable}
+
+	\subsection{Byte value 0x50's: Stack, memory, storage, and flow operations.}
+	\begin{longtable}{|ccccc|}
+	\hline
+	\textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+	\hline
+
+		0x50 & POP & 2 & 1 & 0 & Removes an item from the stack. \\
+		0x51 & MLOAD & 3 & 1 & 1 & Load a word from memory. \\
+		0x52 & MSTORE & 3 & 2 & 0 & Save a word to memory. \\
+		0x53 & MSTORE8 & 3 & 2 & 0 & Save a byte to memory. \\
+		0x54 & SLOAD & 200 & 1 & 1 & Load a word from storage. \\
+		0x55 & SSTORE & 0 & 2 & 0 & Save a word to storage.\\
+		0x56 & JUMP & 8 & 1 & 0 & Alter the program counter. \\
+		0x57 & JUMPI & 10 & 2 & 0 & Conditionally alter the program counter. \\
+		0x58 & PC & 2 & 0 & 1 & Look up the value of the program counter prior to the increment resulting from this instruction. \\
+		0x59 & MSIZE & 2 & 0 & 1 & Get the size of active memory in bytes. \\
+		0x5a & GAS & 2 & 0 & 1 & Get the amount of available gas, including the corresponding reduction for the cost of this instruction. \\
+		0x5b & JUMPDEST & 1 & 0 & 0 Mark a valid destination for jumps. \footnote{This operation has no effect on the \texttt{machine\_state during execution.}} \\
+	\end{longtable}
+
+		\subsection{0x60 to 0x7f: Push Operations}
+        \begin{longtable}{|ccccc|}
+        \hline
+        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+        \hline
+	0x60-0x7f & PUSH1-PUSH32 & - & 0 & 1 & Place a 1-byte item on the stack. The bytes are read in line from the programs code's bytes array. If the bytes extend past the limit of 1-byte, their value will default to 0. As for all other push operations, the byte(s) are right-aligned, meaning the lowest significant value is placed in big-endian order. \\
+	\hline
+	\end{longtable}
+
+		\subsection{0x80 to 0x8f: Duplication Operations}
+        \begin{longtable}{|ccccc|}
+        \hline
+        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+        \hline
+	0x80-0x8f & DUP1-DUP16 & - & 1-16 & 2-17 & Duplicate a stack item based on its order in the stack, 1st through 16th.
+	\hline
+	\end{longtable}
+        \subsection{90s: Swap Operations}
+        \begin{longtable}{|ccccc|}
+        \hline  
+        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+        \hline  
+	0x90-0x9f & SWAP1-SWAP16 & - & 2-17 & 2-17 & Exchange any stack item (\#1 through \#16) with any other stack item (\#1 through \#16.) \\
+	\hline
+	\end{longtable}
+
+	\subsection{0xa0 to 0xa4: Logging Operations}
+        \begin{longtable}{|ccccc|}
+        \hline  
+        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+        \hline  
+		0xa0-0xa4 & LOG0-LOG4 & n1-n5 & 2-6 & 0 & Append log record with 0 to 4 topics. The n variable is equal to 375 gas. \\
+	\hline
+	\end{longtable}
+
+        \subsection{0xf0's: System Operations}
+        \begin{longtable}{|ccccc|}
+        \hline  
+        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
+        \hline  
+		0xf0 & CREATE & 32000 & 3 & 1 & Create a new contract account. Operand order is: value, input offset, input size. \\
+		0xf1 & CALL & 700 & 7 & 1 & Message-call into an account. The operand order is: gas, to, value, in offset, in size, out offset, out size. \\
+		0xf2 & CALLCODE & 700 & 7 & 1 & Message-call into this account with an alternative account's code. Exactly equivalent to CALL, except the recipient is the same account as at present, but the code is overwritten. \\
+		0xf3 & RETURN & 0 & 2 & 0 & Halt execution, then return output data. This defines the output at the moment of the halt. \\
+		0xf4 & DELEGATECALL & 700 & 6 & 1 & Message-call into this account with an alternative account's code, but with persisting values for \texttt{sender} and \texttt{value}. DELEGATECALL takes one less argument than CALL. This means that the recipient is in fact the same account as at present, but that the code is overwritten \textit{and} the context is almost entirely identical. \\
+		0xf5 & CALLBLACKBOX & 40 & 7 & 1 & - \\
+		0xfa & STATICCALL & 40 & 6 & 1 & - \\
+		0xfd & REVERT & 0 & 2 & 0 & - \\
+		0xfe & INVALID & - & 1 & 0 & Designated invalid instruction.
+		0xff & SELFDESTRUCT & 5000 & 1 & 0 & Halt execution and register the account for later deletion. \\
 \hline
 \end{longtable}
 
@@ -701,6 +756,5 @@ x40 & BLOCKHASH & 20 & 1 & 1 \\
 \end{alphafootnotes}
 
 \printindex
-
 
 \end{document}
