--- a/offwhtp/off-white paper.tex
+++ b/offwhtp/off-white paper.tex
@@ -263,17 +263,6 @@
 \justify
 
 		\subsection{EVM Code}
-		
- 		\subsection{Programming Languages}
-
-		\subsubsection{Lower-Level Lisp}
-			The Lisp-Like low level language: a human-writable language used for authoring simple contracts and trans-compiling to higher-level languages.
-	
-		\subsubsection{Solidity}
-			A JavaScript-like language, and the most commonly used language for creating smart contracts in Ethereum.
-		\subsubsection{Serpent}
-		\subsubsection{Viper}
-
 	\section{Memory and Storage}
 			
 		\subsection{Data Structures}
@@ -580,7 +569,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 		The human readable version of EVM code. But what exactly are these computer instructions that can be executed with the same level of veracity and certainty as Bitcoin transactions? How do they come about, what makes them up, how are they kept in order, and what makes them execute? The first part of answering this question is understanding opcodes. In traditional machine architectures, you may not be introduced to working with processor-level assembly instructions for some time. In Ethereum however, they are essential to understanding the protocol because they are the most minute and subtle (yet HUGELY important) things going on in the Ethereum Blockchain at any moment, and they are the real "currency," that Ethereum trades in. I'll explain what I mean by that in a minute. First, let's go over a few Opcodes:\footnote{A full list of Opcodes is in Appendix B} \\
 
 
-				\paragraph{}The STOP Opcode is used in order to stop a computation once it has completed, or to halt a computation if it has run out of gas. The ADD, MUL, SUB, and DIV operations are addition, multiplication, subtraction and division operations. The In/Out columns refer to inputs (to \texttt{machine\_state}), the state which decides every new \texttt{world\_state}. 
+				\paragraph{}The STOP Opcode is used in order to stop a computation once it has completed, or to halt a computation if it has run out of gas. The ADD, MUL, SUB, and DIV operations are addition, multiplication, subtraction and division operations. The In/Out columns refer to inputs (to \texttt{potential\_state}), the state which decides every new \texttt{actual\_state}. 
 
 \end{multicols*}
 
@@ -695,8 +684,41 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
         \hline
         \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
         \hline
-	0x60-0x7f & PUSH1-PUSH32 & - & 0 & 1 & Place a 1-byte item on the stack. The bytes are read in line from the programs code's bytes array. If the bytes extend past the limit of 1-byte, their value will default to 0. As for all other push operations, the byte(s) are right-aligned, meaning the lowest significant value is placed in big-endian order. \\
-	\hline
+		0x60 & PUSH1 & - & 0 & 1 & Place a 1-byte item on the stack. \footnote{The bytes are read in line from the programs code's bytes array. If the bytes extend past the limit of 1-byte, their value will default to 0. As for all other push operations, the byte(s) are right-aligned, meaning the lowest significant value is placed in big-endian order.} \\
+		0x61 & PUSH2 & - & 0 & 1 & Place a 2-byte item on the stack. \\
+		0x62 & PUSH3 & - & 0 & 1 & Place a 3-byte item on the stack. \\
+		0x63 & PUSH4 & - & 0 & 1 & Place a 4-byte item on the stack. \\
+		0x64 & PUSH5 & - & 0 & 1 & Place a 5-byte item on the stack. \\
+		0x65 & PUSH6 & - & 0 & 1 & Place a 6-byte item on the stack. \\
+		0x66 & PUSH7 & - & 0 & 1 & Place a 7-byte item on the stack. \\
+		0x67 & PUSH8 & - & 0 & 1 & Place a 8-byte item on the stack. \\
+		0x68 & PUSH9 & - & 0 & 1 & Place a 9-byte item on the stack. \\
+		0x69 & PUSH10 & - & 0 & 1 & Place a 10-byte item on the stack. \\
+		0x6a & PUSH11 & - & 0 & 1 & Place a 11-byte item on the stack. \\
+		0x6b & PUSH12 & - & 0 & 1 & Place a 12-byte item on the stack. \\
+		0x6c & PUSH13 & - & 0 & 1 & Place a 13-byte item on the stack. \\
+		0x6d & PUSH14 & - & 0 & 1 & Place a 14-byte item on the stack. \\
+		0x6e & PUSH15 & - & 0 & 1 & Place a 15-byte item on the stack. \\
+		0x6f & PUSH16 & - & 0 & 1 & Place a 16-byte item on the stack. \\
+		0x70 & PUSH17 & - & 0 & 1 & Place a 17-byte item on the stack. \\
+		0x71 & PUSH18 & - & 0 & 1 & Place a 18-byte item on the stack. \\
+		0x72 & PUSH19 & - & 0 & 1 & Place a 19-byte item on the stack. \\
+		0x73 & PUSH20 & - & 0 & 1 & Place a 20-byte item on the stack. \\
+		0x74 & PUSH21 & - & 0 & 1 & Place a 21-byte item on the stack. \\
+		0x75 & PUSH22 & - & 0 & 1 & Place a 22-byte item on the stack. \\
+		0x76 & PUSH23 & - & 0 & 1 & Place a 23-byte item on the stack. \\
+		0x77 & PUSH24 & - & 0 & 1 & Place a 24-byte item on the stack. \\
+		0x78 & PUSH25 & - & 0 & 1 & Place a 25-byte item on the stack. \\
+		0x79 & PUSH26 & - & 0 & 1 & Place a 26-byte item on the stack. \\
+		0x7a & PUSH27 & - & 0 & 1 & Place a 27-byte item on the stack. \\
+		0x7b & PUSH28 & - & 0 & 1 & Place a 28-byte item on the stack. \\
+		0x7c & PUSH29 & - & 0 & 1 & Place a 29-byte item on the stack. \\
+		0x7d & PUSH30 & - & 0 & 1 & Place a 30-byte item on the stack. \\
+		0x7e & PUSH31 & - & 0 & 1 & Place a 31-byte item on the stack. \\
+		0x7f & PUSH32 & - & 0 & 1 & Place a 32-byte item on the stack. \\
+	
+		
+		\hline
 	\end{longtable}
 
 		\subsection{0x80 to 0x8f: Duplication Operations}
@@ -704,15 +726,48 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
         \hline
         \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
         \hline
-	0x80-0x8f & DUP1-DUP16 & - & 1-16 & 2-17 & Duplicate a stack item based on its order in the stack, 1st through 16th. \\
+	0x80 & DUP1 & - & 1 & 2 & Duplicate the 1st item in the stack. \\
+	0x81 & DUP2 & - & 2 & 3 & Duplicate the 2nd item in the stack. \\
+	0x82 & DUP3 & - & 3 & 4 & Duplicate the 3rd item in the stack. \\
+	0x83 & DUP4 & - & 4 & 5 & Duplicate the 4th item in the stack. \\
+	0x84 & DUP5 & - & 5 & 6 & Duplicate the 5th item in the stack. \\
+	0x85 & DUP6 & - & 6 & 7 & Duplicate the 6th item in the stack. \\
+	0x86 & DUP7 & - & 7 & 8 & Duplicate the 7th item in the stack. \\
+	0x87 & DUP8 & - & 8 & 9 & Duplicate the 8th item in the stack. \\
+	0x88 & DUP9 & - & 9 & 10 & Duplicate the 9th item in the stack. \\
+	0x89 & DUP10 & - & 10 & 11 & Duplicate the 10th item in the stack. \\
+	0x8a & DUP11 & - & 11 & 12 & Duplicate the 11th item in the stack. \\
+	0x8b & DUP12 & - & 12 & 13 & Duplicate the 12th item in the stack. \\
+	0x8c & DUP13 & - & 13 & 14 & Duplicate the 13th item in the stack. \\
+	0x8d & DUP14 & - & 14 & 15 & Duplicate the 14th item in the stack. \\
+	0x8e & DUP15 & - & 15 & 16 & Duplicate the 15th item in the stack. \\
+	0x8f & DUP16 & - & 16 & 17 & Duplicate the 16th item in the stack. \\		
 	\hline
 	\end{longtable}
-        \subsection{90s: Swap Operations}
+        
+	
+	\subsection{90s: Swap Operations}
 	\begin{longtable}{|cp{2.8cm}cccp{6cm}|}
         \hline  
         \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
         \hline  
-	0x90-0x9f & SWAP1-SWAP16 & - & 2-17 & 2-17 & Exchange any stack item (\#1 through \#16) with any other stack item (\#1 through \#16.) \\
+	0x90 & SWAP1 & - & 2 & 2 & Exchange the 1st and 2nd stack items. \\
+	0x91 & SWAP2 & - & 3 & 3 & Exchange the 1st and 3rd stack items. \\
+	0x92 & SWAP3 & - & 4 & 4 & Exchange the 1st and 4th stack items. \\
+	0x93 & SWAP4 & - & 5 & 5 & Exchange the 1st and 5th stack items. \\
+	0x94 & SWAP5 & - & 6 & 6 & Exchange the 1st and 6th stack items. \\
+	0x95 & SWAP6 & - & 7 & 7 & Exchange the 1st and 7th stack items. \\
+	0x96 & SWAP7 & - & 8 & 8 & Exchange the 1st and 8th stack items. \\
+	0x97 & SWAP8 & - & 9 & 9 & Exchange the 1st and 9th stack items. \\
+	0x98 & SWAP9 & - & 10 & 10 & Exchange the 1st and 10th stack items. \\
+	0x99 & SWAP10 & - & 11 & 11 & Exchange the 1st and 11th stack items. \\
+	0x9a & SWAP11 & - & 12 & 12 & Exchange the 1st and 12th stack items. \\
+	0x9b & SWAP12 & - & 13 & 13 & Exchange the 1st and 13th stack items. \\
+	0x9c & SWAP13 & - & 14 & 14 & Exchange the 1st and 14th stack items. \\
+	0x9d & SWAP14 & - & 15 & 15 & Exchange the 1st and 15th stack items. \\
+	0x9e & SWAP15 & - & 16 & 16 & Exchange the 1st and 16th stack items. \\
+	0x9f & SWAP16 & - & 17 & 17 & Exchange the 1st and 17th stack items. \\
+	
 	\hline
 	\end{longtable}
 
@@ -721,11 +776,15 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
         \hline  
         \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
         \hline  
-		0xa0-0xa4 & LOG0-LOG4 & n1-n5 & 2-6 & 0 & Append log record with 0 to 4 topics. The n variable is equal to 375 gas. \\
+		0xa0 & LOG0 & 375 & 2 & 0 & Append log record with 0 topics. \\
+		0xa1 & LOG1 & 750 & 3 & 0 & Append log record with 1 topic. \\
+		0xa2 & LOG2 & 1125 & 4 & 0 & Append log record with 2 topic. \\
+		0xa3 & LOG3 & 1500 & 5 & 0 & Append log record with 3 topic. \\
+		0xa4 & LOG4 & 1875 & 6 & 0 & Append log record with 4 topic. \\
 	\hline
 	\end{longtable}
 
-        \subsection{0xf0's: System Operations}
+        \subsubsection{0xf0's: System Operations}
 	\begin{longtable}{|cp{2.8cm}cccp{6cm}|}
         \hline  
         \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
@@ -742,6 +801,18 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 		0xff & SELFDESTRUCT & 5000 & 1 & 0 & Halt execution and register the account for later deletion. \\
 \hline
 \end{longtable}
+
+		
+ 		\subsection{EVM-script}
+	
+		\subsubsection{Lower-Level Lisp}
+			The Lisp-Like low level language: a human-writable language used for authoring simple contracts and trans-compiling to higher-level languages.
+	
+		\subsubsection{Solidity}
+			A language similar in syntax to Javascript, and the most commonly used language for creating smart contracts in Ethereum.
+		\subsubsection{Serpent}
+
+		\subsubsection{Viper}
 
 
 
